# naivc

./: .gitignore  Cargo.toml
naivc-derive/: Cargo.toml
naivc-derive/examples/: json_lexer.rs  manual_json_lexer.rs
naivc-derive/src/: lexer.rs  lib.rs
naivc-derive/src/lexer/: attr.rs  dfa.rs  iter.rs
naivc-lexer/: Cargo.toml
naivc-lexer/examples/: json_lexer.rs
naivc-lexer/src/: dfa.rs  lexer.rs  lib.rs  nfa.rs  token.rs  unicode_tables.rs
naivc-lexer/src/dfa/: range_partition.rs  transltion.rs
naivc-lexer/src/lexer/: plain.rs
naivc-lexer/src/regex/: compiler.rs  lex.rs  range_set.rs
naivc-lexer/src/regex/compiler/: char_class.rs
naivc-lexer/src/unicode_tables/: general_category.rs
naivc-parser/: Cargo.toml
naivc-parser/examples/: json_parser.rs
naivc-parser/src/: lib.rs  lr.rs  symbol.rs
naivc-parser/src/lr/: error_recovery.rs  parser.rs  table.rs
naivc_derive/: Cargo.toml
naivc_derive/src/: lib.rs
naivc_lexer/: Cargo.toml
naivc_lexer/src/: dfa.rs  lexer.rs  nfa.rs  regex.rs  token.rs
naivc_lexer/src/dfa/: rdfa.rs  rrdfa.rs
naivc_lexer/src/lexer/: plain.rs
naivc_lexer/src/regex/: compiler.rs
naivc_lexer/src/regex/compiler/: capture_group.rs  quantifier.rs
naivc_lexer/src/unicode_tables/: property_bool.rs
