[package]
name = "naivc-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[[example]]
name = "manual_json_lexer"
path = "examples/manual_json_lexer.rs"

[[example]]
name = "json_lexer"
path = "examples/json_lexer.rs"

required-features = []

[dependencies]
syn = { version = "2.0", features = ["extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"
naivc-lexer = { "path" = "../naivc-lexer" }
