[package]
name = "naivc-parser"
version = "0.1.0"
edition = "2024"

[features]
lexer = ["dep:naivc-lexer"]

[dependencies]
naivc-lexer = { path = "../naivc-lexer", optional = true }

[dev-dependencies]
naivc-derive = { path = "../naivc-derive" }

[[example]]
name = "json_parser"
path = "examples/json_parser.rs"
required-features = ["lexer"]
